force-app/main/default/objects/clariti__ParentObjectSearchSettings__mdt/clariti__ParentObjectSearchSettings__mdt.object-meta.xml
<CustomObject>
    <label>Parent Object Search Settings</label>
    <pluralLabel>Parent Object Search Settings</pluralLabel>
</CustomObject>