force-app/main/default/objects/clariti__ParentObjectSearchSettings__mdt/fields/clariti__Active__c.field-meta.xml
<CustomField>
    <fullName>clariti__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Toggle to display the parent object as a search criteria option</description>
    <inlineHelpText>Toggle to display the parent object as a search criteria option</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>