force-app/main/default/objects/clariti__ParentObjectSearchSettings__mdt/fields/clariti__EnableForInvoice__c.field-meta.xml
<CustomField>
    <fullName>clariti__EnableForInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays parent object as search criteria in the invoice add items search</description>
    <label>Enable for Invoice</label>
    <type>Checkbox</type>
</CustomField>