force-app/main/default/objects/clariti__ParentObjectSearchSettings__mdt/fields/clariti__EnableForPaymentBatch__c.field-meta.xml
<CustomField>
    <fullName>clariti__EnableForPaymentBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays parent object as search criteria in the payment batch parent search picklist</description>
    <label>Enable for Payment Batch</label>
    <type>Checkbox</type>
</CustomField>