force-app/main/default/objects/clariti__ParentObjectSearchSettings__mdt/fields/clariti__SearchFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>clariti__SearchFieldSetName__c</fullName>
    <description>Name of the field set which defines the searchable field(s) on the parent object</description>
    <inlineHelpText>Name of the field set which defines the searchable field(s) on the parent object</inlineHelpText>
    <label>Search Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>