force-app/main/default/objects/clariti__ParentObjectSearchSettings__mdt/fields/clariti__SearchResultsFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>clariti__SearchResultsFieldSetName__c</fullName>
    <description>Name of the field set which defines the field(s) to be displayed in the search results table</description>
    <inlineHelpText>Name of the field set which defines the field(s) to be displayed in the search results table</inlineHelpText>
    <label>Search Results Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>